chore: Update build and test configurations
Renamed `fixed_string_tests.cpp` to `fixed_bytes_tests.cpp` to reflect the updated functionality. Also updated the build and test configurations to include the new file.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ include(../LibVersa.cmake)
 add_executable( 
    libversa_unit_tests 
    versa_tests.cpp
-   fixed_string_tests.cpp
+   fixed_bytes_tests.cpp
 )
 
 versa_setup_target( libversa_unit_tests
