chore: Update build and test configurations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,8 +5,9 @@ include(../LibVersa.cmake)
 # ##################################################################################################
 add_executable( 
    libversa_unit_tests 
+   memory_tests.cpp
    versa_tests.cpp
-   fixed_bytes_tests.cpp
+   #fixed_bytes_tests.cpp
 )
 
 versa_setup_target( libversa_unit_tests
