--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -323,7 +323,7 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @DOX_SOURCE_DIR@
+INPUT                  = @DOX_SOURCE_DIRS@
 INPUT_ENCODING         = UTF-8
 INPUT_FILE_ENCODING    =
 FILE_PATTERNS          = *.c \
