🎨 (trace_impl.hpp): rename 'backtrace' to 'tracer_impl' for clarity and semantics ➕ (trace_impl.hpp): add iostream and string_view includes for output handling ✨ (trace_impl.hpp): add function docs for better code understanding ♻️ (trace_impl.hpp): refactor 'print' function to 'dump' with improvements
⚡️ (trace_impl.hpp): optimize stack trace by using SYMBOL_INFO and allocating memory once

✅ (CMakeLists.txt): add debug_tests to test suite
✅ (compile_time_tests.cpp): fix test case conditions for better portability
✨ (debug_tests.cpp): add new tests for debugging and backtracing functionality

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ add_test(astro_tests)
 add_test(async_tests)
 add_test(compile_time_tests)
 add_test(cryptid_tests)
+add_test(debug_tests)
 add_test(fixed_string_tests)
 add_test(logger_tests)
 add_test(map_tests)
