♻️ Refactor debug and IO modules, rename and update paths ✨ Add demangle functionality for symbol names across platforms 🎨 Improve code structure for better readability and organization 📝 Update and add new IO-related test cases ⬆️ Enhance testing utilities for capturing and comparing outputs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,7 +24,8 @@ add_test(compile_time_tests)
 add_test(cryptid_tests)
 add_test(debug_tests)
 add_test(fixed_string_tests)
-add_test(logger_tests)
+add_test(io_tests)
+#add_test(logger_tests)
 add_test(map_tests)
 add_test(memory_tests)
 #add_test(interpolate_tests)
